# owasp-agentic-mcp

./: .mcp.json  README.md  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/mcp/: server-card.json
